Improved spacing of buttons avoiding adding add-hoc classes

--- a/src/Icons.css
+++ b/src/Icons.css
@@ -1,41 +1,60 @@
 .active-icon {
-  background-color: transparent;
-  color: black;
+    background-color: transparent;
+    color: black;
 }
+
 .active-icon:hover {
-  filter: saturate(30%);
+    filter: saturate(30%);
 }
+
 .disabled {
-  opacity: 0.5;
+    opacity: 0.5;
 }
 
 .icon-primary {
-  color: var(--primary);
+    color: var(--primary);
 }
+
 .icon-secondary {
-  color: var(--secondary);
+    color: var(--secondary);
 }
+
 .icon-success {
-  color: var(--success);
+    color: var(--success);
 }
+
 .icon-danger {
-  color: var(--danger);
+    color: var(--danger);
 }
+
 .icon-warning {
-  color: var(--warning);
+    color: var(--warning);
 }
+
 .icon-info {
-  color: var(--info);
+    color: var(--info);
 }
 
 .icon-light {
-  color: var(--light);
+    color: var(--light);
 }
 
 .icon-dark {
-  color: var(--dark);
+    color: var(--dark);
 }
 
 .icon-body {
-  color: var(--body);
+    color: var(--body);
+}
+
+.btn span:not(:empty) {
+    margin-left: 0.5em;
+}
+
+.button-set .btn {
+    margin-left: 0.5em;
+}
+
+.button-set .btn:first-child {
+    margin-left: 0;
 }
